@startuml

skinparam classAttributeIconSize 0
hide empty attributes

package "<<aggregate>> DroneLanguagePlugin" {
    class DroneLanguagePlugin <<entity>> {
    }

    class FQClassName <<value object>> {
    }

    class DroneLanguage <<value object>> <<id>> {
    }

    DroneLanguagePlugin --> "1" FQClassName
    DroneLanguagePlugin --> "1" DroneLanguage
}

@enduml
